# gauntlet-graphs-assignment

./: .gitignore  README.md  create_golden_set.py  flow_graph.md  main.py  pyproject.toml  sample.csv  test_db_connection.py  verify_outputs.py
golden_set/: evaluator.py  golden_data.yaml
golden_set/test_data/: test_01_lowercase.csv  test_02_mixedcase.csv  test_03_slight_name_diff.csv  test_04_abbreviation.csv  test_05_different_name.csv  test_06_rebrand.csv  test_07_near_duplicate.csv  test_08_chain_location.csv  test_09_imaginary.csv  test_10_fictional.csv
graph/: orchestrator.py  state.py
graph/nodes/: __init__.py  confidence_scoring.py  database_query.py  error_handler.py  format_output.py  log_duplicate.py  next_row.py  occupancy_classification.py  parse_row.py  places_search.py  routers.py  standardize.py  verify_output.py  write_output.py
graph/tools/: __init__.py  google_places.py  liv_database.py  llm_confidence.py  llm_occupancy.py
